# dssi

./: COPYING  ChangeLog  Makefile  Makefile.am  README  autogen.sh  configure.ac  dssi.pc
doc/: RFC.txt  TODO  midi-controllers.txt  why-no-channels.txt  why-use.txt
dssi/: dssi.h
examples/: .cvsignore  Makefile  Makefile.am  dssi_analyse_plugin.c  dssi_example_host.c  dssi_example_host.h  dssi_list_plugins.c  dssi_osc_send.c  dssi_osc_update.c  karplong.cpp  less_trivial_synth.c  less_trivial_synth_qt_gui.cpp  less_trivial_synth_qt_gui.h  message_buffer.c  message_buffer.h  osc_url.c  osc_url.h  trivial_sampler.c  trivial_sampler.h  trivial_sampler_qt_gui.cpp  trivial_sampler_qt_gui.h  trivial_synth.c
examples/fluid/: Makefile  fluid-dssi.cpp  fluid-dssi.h
jack-dssi-host/: Makefile  jack-dssi-host.c  jack-dssi-host.h
scripts/: txt2html.pl
tests/: Makefile  controller.c
